Prevent to break Ashura UI if browser has thick scrollbar

--- a/src/css/panel.less
+++ b/src/css/panel.less
@@ -11,6 +11,11 @@
   overflow-x: hidden;
   animation-duration: 0.5s;
 }
+
+.panel::-webkit-scrollbar {
+    width: 0em;
+}
+
 .left.panel{
   background-color: @light-with-opacity;
   animation-name: fadeInFromTop;
